# MeetKitAI

./: .npmignore  AGENT_FLOW.md  CHANGELOG.md  LICENSE  README.md  cli.js  package-lock.json  package.json
.agent/: config.yaml
.agent/agents/: AIProjectBrigade.py  AIProjectBrigade_Enhanced.py  AIProjectBrigade_README.md  Agent_Architecture.md  GLMAgent.py  GLOSSARY.md  NvidiaNanoAgent.py  NvidiaNanoAgent_README.md  ProjectDevAgent_README.md  UltraContextAgent.py  UltraContextAgent_README.md  git_ops.py  profiles.py  repair.py  v4_roadmap.md  validation.py
.agent/plugins/: __init__.py  base_plugin.py  example_plugin.py
.agent/skills/ai-prompt-engineering/: SKILL.md
.agent/skills/aws-cloud/: SKILL.md
.agent/skills/django-expert/: SKILL.md
.agent/skills/docker-kubernetes/: SKILL.md
.agent/skills/fastapi-expert/: SKILL.md
.agent/skills/flutter-mastery/: SKILL.md
.agent/skills/flutter-ui-ux/: SKILL.md
.agent/skills/git-advanced/: SKILL.md
.agent/skills/karya-agent/: SKILL.md
.agent/skills/python-data-science/: SKILL.md
.agent/skills/typescript-patterns/: SKILL.md
.agent/templates/cli-tool/: README.md  pyproject.toml
.agent/templates/fullstack-react-fastapi/: README.md  docker-compose.yml
.agent/templates/fullstack-react-fastapi/backend/: requirements.txt
.agent/templates/fullstack-react-fastapi/frontend/: package.json
.agent/templates/microservices/: README.md
.agent/templates/ml-pipeline/: README.md  requirements.txt
.agent/workflows/: document.md  migrate.md  performance.md  refactor.md  security-audit.md
